--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -9,6 +9,7 @@ body {
   color: #030303;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  margin: 0;
 }
 
 header {
@@ -27,12 +28,20 @@ main {
   padding: 1rem 0;
 }
 
-.container {
+.media-player__container {
   max-width: 960px;
   width: 100%;
   margin: 0 auto;
 }
 
-.movie {
+.media-player__container--movie {
   width: 100%;
+}
+
+.media-player__container--button {
+  position: relative;
+  height: 40px;
+  top: -60px;
+  left: 20px;
+  cursor: pointer;
 }
